add support for initial run of the system, based on external file